fixed navbar to show on mobile

--- a/devmusicblog/static/sass/navbar.sass
+++ b/devmusicblog/static/sass/navbar.sass
@@ -19,3 +19,9 @@
 .navbar-custom .nav-item:focus .nav-link,
 .navbar-custom .nav-item:hover .nav-link
     color: $smoke
+
+.collapse
+    padding: 0.5rem
+    z-index: 100 !important
+    background-color: $creamsicle
+    border-radius: 3px
